[package]
name = "abracadabra"
description = "make development environments magically appear"
homepage = "https://github.com/ucodery/abracadabra"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ucodery/abracadabra"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
indexmap = "2.7"
walkdir = "2.5"
