[package]
name = "abracadabra"
description = "make development environments magically appear"
homepage = "https://github.com/ucodery/abracadabra"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ucodery/abracadabra"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colog = "1.3.0"
glob = "0.3"
indexmap = "2.7"
log = "0.4.22"
walkdir = "2.5"
